src/Nowruz/modules/general/components/SearchDropdown/search-dropdown.module.scss
@import 'src/components/_primitives.scss';

.label {
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  text-align: left;
  color: $color-grey-700;
}
.labelContainer {
  margin-bottom: 6px;
}
.option {
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px;
  color: $color-grey-900;
  height: 44px;
  cursor: pointer;
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  padding: 8px;
  border-radius: 6px;
}
.option:hover {
  background-color: $color-grey-50;
}

.selecetdOption {
  background-color: $color-grey-50;
}

.dropdown {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 14px;
}
.startIcon {
  margin-left: 14px;
}

.msg {
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  letter-spacing: 0em;
  text-align: left;
  margin-top: 6px;
}

.errorMsg {
  color: $color-error-500;
}

.description {
  margin-left: 8px;
  font-size: 16px;
  color: $color-grey-600;
  font-weight: 400;
  line-height: 24px;
}
.input {
  border-radius: 8px;
  display: flex;
  gap: 8px;
  height: 44px;
  display: flex;
  align-items: center;
}

